--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,108 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@keyframes slideInFromLeft {
+    from {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+    to {
+      transform: translateX(0);
+      opacity: 1;
+    }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@keyframes slideInFromRight {
+    from {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+    to {
+      transform: translateX(0);
+      opacity: 1;
+    }
+}
+
+@keyframes textShadowAppear {
+  0% {
+    text-shadow: none; /* Sin sombra al inicio */
+  }
+  50%{
+    text-shadow: -7px 6px 0px rgba(0, 0, 0, 0.8); /* Sombra al final */
+  }
+  100% {
+    text-shadow: -5px 4px 0px rgba(0, 0, 0, 0.7); /* Sombra al final */
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.animate-text-shadow {
+  animation: textShadowAppear 0.5s ease-out 1.8s forwards;
+  -webkit-animation: textShadowAppear 0.5s ease-out 1.8s forwards;
 }
+
+.animate-slide-in {
+    animation: slideInFromLeft .5s ease-out forwards;
+    -webkit-animation: slideInFromLeft .5s ease-out forwards;
+}
+
+.animate-slide-in-left {
+  animation: slideInFromLeft 1s ease-out forwards;
+  -webkit-animation: slideInFromLeft 1s ease-out forwards;
+}
+
+.animate-slide-in-right-1 {
+  animation: slideInFromRight 1s ease-out .2s forwards;
+  -webkit-animation: slideInFromRight 1s ease-out .2s forwards;
+}
+
+.animate-slide-in-left-2 {
+  animation: slideInFromLeft 1s ease-out .8s forwards;
+  
+  -webkit-animation: slideInFromLeft 1s ease-out .8s forwards;
+}
+
+.text-shadow {
+    text-shadow: -7px 6px 0px rgba(0, 0, 0, 0.8);
+  }
+
+.underline-above {
+    position: relative;
+  }
+
+.underline-above::before {
+    content: '';
+    position: absolute;
+    top: -33px; 
+    right: -10rem;
+    width: 30vw;
+    /* height: 65px; */
+    height: 70%;
+    background-color: #000;
+    opacity: 0.9;
+    z-index: -1;
+}
+
+@media (max-width: 650px) {
+  .underline-above::before {
+    top: -10px;
+    right: -2rem;
+  }
+}
+
+
+
+.underline-above-yellow::before {
+  background-color: #FFEE00;
+
+}
+.underline-above-blue::before {
+  background-color: #0d00ff;
+
+}
+
+.underline-above-red::before {
+  background-color: #ff0000;
+
+
+}
+
